methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estSurBiscuit==false){
    avance()
  }
   while (estSurBiscuit()==false){
     gauche()
     for (a <- 1 to 4){
       if (estFaceMur()==false){
         avance(); 
         if (getCouleurSol()!=Color.green){
           recule()
         }
       }
      droite()
     }
   }
}        

